--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                         <div class="project-info" style="padding: 32px 24px 24px 24px;">
                             <h3 style="font-size: 1.5rem; color: #4A90E2; margin-bottom: 12px;">Student Record System</h3>
                             <p style="font-size: 1.05rem; color: #6c757d; margin-bottom: 18px; background: #f7faff; padding: 14px 18px; border-radius: 8px;">
-                                A web application built for task management, featuring user authentication and a responsive design.
+                                A web application built for managing student records, featuring secure user authentication, a responsive design, and database integration for storing, updating, and viewing academic profiles, courses, and grades.
                             </p>
                             <div class="project-tags" style="margin-bottom: 0;">
                                 <span class="project-tag">HTML</span>
