--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       background: var(--bg);
       display: flex;
       justify-content: center;
+      flex-wrap: wrap;
       gap: 2rem;
       padding: 1rem 0.5rem;
       border-bottom: 1px solid #222;
@@ -239,6 +240,7 @@
   </nav>
 
   <div class="container">
+
     <section id="projects" class="glass">
       <h2>Projects</h2>
       <ul>
@@ -270,14 +272,10 @@
     <section id="about" class="glass">
       <h2>About Me</h2>
       <p style="text-align: center; line-height: 1.6;">
-  Hello, I'm DAN — a  BSIT student who enjoys learning how technology works from the inside out.  
-  I’m especially interested in both front-end design and back-end logic, and I spend my time building practical projects that help me grow.  
-  I'm still learning, but I’m always curious and excited to create solutions that are simple, useful, and thoughtfully built.
-</p>
-
+        Hello, I'm DAN — a BSIT student who enjoys learning how technology works from the inside out.  
+        I’m especially interested in both front-end design and back-end logic, and I spend my time building practical projects that help me grow.  
+        I'm still learning, but I’m always curious and excited to create solutions that are simple, useful, and thoughtfully built.
+      </p>
     </section>
 
     <section id="contact" class="glass">
-      <h2>Contact</h2>
-      <form action="send.php" method="POST">
-        <input type="text"
