--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>&lt;Dan/dev&gt; | Portfolio</title>
+  <title>&lt;<Dan/dev>&gt; | Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <style>
     :root {
@@ -203,7 +203,7 @@
 <nav>
   <button onclick="showSection('projects')">Projects</button>
   <button onclick="showSection('skills')">Skills</button>
-  <button onclick="showSection('about')">About</button>
+  <button onclick="showSection('about')">About Me</button>
   <button onclick="showSection('contact')">Contact</button>
 </nav>
 
@@ -247,7 +247,7 @@
       <li><i class="devicon-python-plain colored"></i> Python</li>
       <li><i class="devicon-java-plain colored"></i> Java</li>
       <li><i class="devicon-mysql-plain colored"></i> SQL</li>
-       <li><i class="devicon-xampp-plain colored"></i> PHP</li>
+       <li><i class="devicon-php-plain colored"></i> PHP</li>
     </ul>
   </section>
 
@@ -266,7 +266,7 @@
     Reach out anytime:<br><br>
     <a href="mailto:danielprudenciado74@gmail.com" style="color: var(--accent); text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: bold;">
       <img src="https://static.dezeen.com/uploads/2020/10/gmail-google-logo-rebrand-workspace-design_dezeen_2364_sq.jpg" alt="Gmail Icon" style="height: 20px; vertical-align: middle;">
-      danielprudenciado74@gmail.com
+      dandevjr@gmail.com
     </a>
   </div>
 </section>
