--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
   <h2>Contact</h2>
   <div style="text-align:center; font-size:1.1rem; line-height:1.8; color: var(--text);">
     Reach out anytime:<br><br>
-    <a href="mailto: dandevjr@gmail.com" style="color: var(--accent); text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: bold;">
+    <a href="mailto:danielprudenciado74@gmail.com" style="color: var(--accent); text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: bold;">
       <img src="https://static.dezeen.com/uploads/2020/10/gmail-google-logo-rebrand-workspace-design_dezeen_2364_sq.jpg" alt="Gmail Icon" style="height: 20px; vertical-align: middle;">
-      dandevjr@gmail.com
+      danielprudenciado74gmail.com
     </a>
   </div>
 </section>
