--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <button class="toggle-btn" onclick="toggleTheme()">🌗 Theme</button>
 
   <header>
-    <h1>&lt;Dan/dev&gt;</h1>
+    <h1 style="color: black;">&lt;Dan/dev&gt;</h1>
   </header>
 <nav>
   <button onclick="showSection('projects')">Projects</button>
@@ -212,34 +212,34 @@
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <h3>Barangay Information System</h3>
+       <h3 style="color: black;">&lt;Barangay Information System&gt;</h3>
         <p>Centralized platform for managing residents and barangay operations efficiently.</p>
       </div>
       <div class="project-card">
-        <h3>Grocery Mall System</h3>
+       <h3 style="color: black;">&lt;Barangay Information System&gt;</h3>
         <p>POS and inventory management tool for small to medium-sized retail stores.</p>
       </div>
       <div class="project-card">
-        <h3>Student Record System</h3>
+       <h3 style="color: black;">Student Record System</h3>
         <p>Academic performance and profile tracker with printable report functionality.</p>
       </div>
       <div class="project-card">
-        <h3>Inventory Dashboard</h3>
+        <h3 style="color: black;">Inventory Dashboard</h3>
         <p>Visual dashboard for monitoring item stocks, categories, and analytics.</p>
       </div>
       <div class="project-card">
-        <h3>Online Voting Platform</h3>
+        <h3 style="color: black;">Online Voting Platform</h3>
         <p>Secure, responsive web app for elections with real-time vote tally display.</p>
       </div>
       <div class="project-card">
-        <h3>Budget Tracker</h3>
+        <h3 style="color: black;">Budget Tracker</h3>
         <p>Track income and expenses with monthly insights and personal budgeting goals.</p>
       </div>
     </div>
   </section>
 
   <section id="skills" class="section">
-    <h2>Skills</h2>
+    <h2 style="color: black;">Skills</h2>
     <ul class="skills">
       <li><i class="devicon-html5-plain colored"></i> HTML</li>
       <li><i class="devicon-css3-plain colored"></i> CSS</li>
@@ -252,7 +252,7 @@
   </section>
 
 <section id="about" class="section">
-  <h2>About Me</h2>
+  <h2 style="color: black;">About Me</h2>
   <div style="text-align:center; line-height:1.6; color: var(--text); font-size: 1.05rem;">
     I’m DAN — a Bachelor of Science in Information Technology student with a strong passion for understanding how technology works from the ground up. <br>
     I design and build real-world applications that merge intuitive front-end experiences with solid, maintainable back-end logic. <br>
@@ -261,7 +261,7 @@
 </section>
 
  <section id="contact" class="section">
-  <h2>Contact</h2>
+  <h2 style="color: black;">Contact</h2>
   <div style="text-align:center; font-size:1.1rem; line-height:1.8; color: var(--text);">
     Reach out anytime:<br><br>
     <a href="mailto:danielprudenciado74@gmail.com" style="color: var(--accent); text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; font-weight: bold;">
