--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    @keyframes glowText {
-      from {
-        text-shadow: 0 0 6px var(--accent), 0 0 12px var(--accent);
-        transform: translateY(0);
-      }
-      to {
-        text-shadow: 0 0 10px var(--accent), 0 0 24px var(--accent);
-        transform: translateY(-1px);
-      }
-    }
+   @keyframes glowText {
+  from {
+    text-shadow: 0 0 6px black, 0 0 12px black;
+    transform: translateY(0);
+  }
+  to {
+    text-shadow: 0 0 3px black, 0 0 6px black;
+    transform: translateY(-2px);
+  }
+}
 
     @keyframes floatCard {
       0%, 100% { transform: translateY(0); }
