--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <section id="about">
   <h2 class="section-title">About Me</h2>
   <div class="card">
-    <p>Hi, I’m Dan — currently studying BSIT at Leyte Normal University. I build responsive web systems, backend logic, and research tools with glowing creativity and minimalistic style.</p>
+    <p>Hi, I’m Dan — currently studying BSIT at Leyte Normal University. I build responsive web systems, backend logic, and research tools. style.</p>
   </div>
 </section>
 
