--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <section id="about">
   <h2 class="section-title">About Me</h2>
   <div class="card">
-    <p>Hi, I’m Dan — currently studying BSIT at Leyte Normal University. I build responsive web systems, backend logic, and research tools. style.</p>
+<p>Hi, I'm Dan — a BSIT student at Leyte Normal University with a growing passion for building responsive web systems and refining backend functionalities. I'm continuously learning and exploring how to make digital experiences smoother and more meaningful.</p>
   </div>
 </section>
 
@@ -121,8 +121,8 @@
   <h2 class="section-title">Featured Project</h2>
   <div class="grid">
     <div class="card">
-      <h3>Tech Shop System</h3>
-      <p>Product management platform with login and cart functionality. Currently being refined and expanded during my college journey.</p>
+      <h3>Shop Tech System</h3>
+<p>I'm currently studying at Leyte Normal University while actively developing my first major project, Shop Tech System. It's still in progress, and I'm learning as I go. If this project succeeds, I hope to publish it worldwide someday — turning it into a platform that supports my future business. This journey is just beginning, and with every step, I’m growing more excited to create meaningful digital solutions and build even more projects that reach and inspire others.</p>
     </div>
   </div>
 </section>
